set up basic home page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       <a href="contact.html">Contact</a>
 </nav>
 
+<header>
+    <h1>Hello I'm <span class = "accent">Joseph</span></h1>
+    <h1>I hope to be a fullstack devolper</h1>
+    <h2>Welcome to my Portfolio</h2>
+
+</header>
 
 
 
