about me sectione done

--- a/about.html
+++ b/about.html
@@ -13,5 +13,71 @@
       <a href="contact.html">Contact</a>
 </nav>
 
+<div class="about-section">
+    <h1>About Me</h1>
+    <p>Hello! I'm Joseph, a passionate fullstack developer with a love for creating dynamic and responsive web applications. With a background in both front-end and back-end development, I enjoy bringing ideas to life through code.</p>
+    <p>In my free time, I love to learn new techlogies and broden my computing horizons, I am a passonite beliver in life-long learning.</p>
+    <p>Some areas of technology I am excited about are artifical intelligence particuarlly in fin-tech, cloud computing, and machine learning  </p>
+</div>
+
+<div class = "skillset">
+    <h2>Skillset</h2>
+    <ul>
+        <li>
+            HTML, CSS, JavaScript
+            <img src="assets/html.png" alt="HTML, CSS, JavaScript" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
+        </li>
+        <li>
+            Python
+            <img src="assets/python.png" alt="Python" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
+        </li>
+        <li>
+            Java
+            <img src="assets/java.png" alt="Java" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
+        </li>
+        <li>
+            C#
+            <img src="assets/C#.png" alt="C#" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
+
+        </li>
+        <li>
+            Node.js
+            <img src="assets/nodejs.png" alt="Node.js" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
+        </li>
+        <li>
+            C++
+            <img src="assets/C++.png" alt="C++" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
+        </li>
+        <li>
+            React
+            <img src="assets/React.png" alt="React" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
+        </li>
+        <li>
+            Mandarin
+            <img src="assets/Mandarin.png" alt="Mandarin" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
+        </li>
+        <li>
+            PHP
+            <img src="assets/php.png" alt="PHP" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
+        </li>
+        <li>
+            MySQL
+            <img src = "assets/background.jpeg" alt="MySQL" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
+        </li>
+        <li>
+            Swift
+            <img src="assets/Swift.png" alt="Swift" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
+        </li>
+        <li>
+            FireBase
+            <img src="assets/firebase.png" alt="FireBase" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
+        </li>
+        <li>
+            Git, GitHub
+            <img src="assets/github.png" alt="Git, GitHub" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
+        </li>
+    </ul>
+
+</div>
 </body>
 </html>
