--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         </li>
         <li>
             C#
-            <img src="assets/C#.png" alt="C#" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
+            <img src="assets/Csharp.png" alt="C#" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
 
         </li>
         <li>
@@ -74,7 +74,7 @@
         </li>
         <li>
             Git, GitHub
-            <img src="assets/github.png" alt="Git, GitHub" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
+            <img src="assets/git.png" alt="Git, GitHub" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
         </li>
     </ul>
 
