--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Project</title>
     <link rel="stylesheet" href="style.css">
+    <script src = "backend.js"></script>
 </head>
 <body>
     
@@ -20,8 +21,13 @@
     <h1>I hope to be a fullstack devolper</h1>
     <h2>Welcome to my Portfolio</h2>
 
+    
 </header>
 
+<div id = "Resume">
+    <button id = "view-resume">👁️ View Resume</button>
+    <button id = "download-resume">📄 Download Resume</button>
+</div>
 
 
 
