--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,57 @@
       <a href="projects.html">Projects</a>
       <a href="contact.html">Contact</a>
 </nav>
+<div id = "container">
+    <h1>Projects</h1>
+    <div class = "project" id = "clubhub">
+        <h2>Club Hub IOS App </h2>
+        <ul>
+            <li> Created a centralized mobile platform for students to discover, join, and manage school clubs with
+announcements, directories, and social features.</li>
+            <li> Utilized Swift and Xcode to develop an intuitive user interface, ensuring seamless navigation and</li>
+            <li> Implemented Firebase for real-time data synchronization, user authentication, and cloud storage.</li>
+            <li> Implemented secure multi-role authentication (student, club leader, admin)</li>
+            <li> Designed features including club directory, announcements feed, join/follow system, and friend network</li>
+            <li> Led project end-to-end: UI/UX, backend integration, and test deployment</li>
+        </ul>
+        <a href="https://github.com/Jamprey25/SeniorProject.git" target = "_blank">View Project</a>
+    </div>
+
+    <div class = "project" id = "Zombs.io">
+        <h2>Zombie Tower Defense Game</h2>
+        <h4> Single Player C# Game</h4>
+        <ul>
+            <li>Developed a real-time tower defense game in C# using Microsoft XNA Framework with multiple defensive
+units, resource management, and wave-based enemy spawning</li>
+            <li> Implemented collision detection, pathfinding AI for zombie enemies, and dynamic bullet trajectory systems
+with different weapon types (towers, cannons, lasers)</li>
+            <li> Created a complete game loop with multiple states (menu, gameplay, game over), player movement with
+obstacle avoidance, and resource collection mechanics.</li>
+        </ul>
+        <a href="https://github.com/Jamprey25/Zombs.io.git" target = "_blank">View Project</a>
+    </div>
+
+    <div class = "project" id = "RateIT">
+        <h2>RateIT Movie Database</h2>
+        <ul>
+            <li> Built movie database app using HTML/CSS, JavaScript, PHP, SQL with IMDB API integration</li>
+            <li> Implemented user authentication, movie search, rating system, and dynamic content rendering</li>
+            <li>• Implemented responsive UI, real-time search, and personalized list creation features. </li>
+        </ul>
+    </div>
+
+
+
+
+
+
+</div>
+
+
+
+
+
+
 
 </body>
 </html>
