--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,25 @@
       <a href="projects.html">Projects</a>
       <a href="contact.html">Contact</a>
 </nav>
+<div class = "contact-section">
+
+    <h1>Contact Me</h1>
+    <p>I am always looking for new opportunities to learn and grow. If you have any questions or would like to get in touch, please feel free to contact me.</p>
+    <p>Email: josephamprey25@gmail.com</p>
+    <p>Phone: 3019081315</p>
+     <a href="https://www.linkedin.com/in/joseph-amprey-26960b348/"><p>LinkedIn</p</a></p>
+    <a href="https://github.com/Jamprey25"></p><p>GitHub</p></a>
+</div>
+
+
+
+
+
+
+</div>
+
+
+
 
 </body>
 </html>
